--- a/Neuro/Ninjadini.Neuro.Unity/package.json
+++ b/Neuro/Ninjadini.Neuro.Unity/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ninjadini.neuro.unity",
+  "name": "com.ninjadini.neuro.unity",
   "version": "0.0.1",
   "unity": "2022.1",
   "displayName": "Ninjadini Neuro Unity",
