--- a/Neuro/Ninjadini.Neuro/package.json
+++ b/Neuro/Ninjadini.Neuro/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ninjadini.neuro",
+  "name": "com.ninjadini.neuro",
   "version": "0.0.1",
   "unity": "2022.1",
   "displayName": "Ninjadini Neuro",
