made it work for unity npm

--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,13 @@
 *.user
 .DS_Store
 Neuro/Neuro.sln.DotSettings.user
-Neuro/Ninjadini.Neuro.CodeGen.Tests/bin/
-Neuro/Ninjadini.Neuro.CodeGen.Tests/obj/
-Neuro/Ninjadini.Neuro.CodeGen/bin/
-Neuro/Ninjadini.Neuro.CodeGen/obj/
-Neuro/Ninjadini.Neuro.csproj/obj/
-Neuro/Ninjadini.Neuro.csproj/bin/
-Neuro/Ninjadini.Neuro.SyncTests/bin/
-Neuro/Ninjadini.Neuro.SyncTests/obj/
-Neuro/Ninjadini.Neuro.IntegrationTests/bin/
-Neuro/Ninjadini.Neuro.IntegrationTests/obj/
+Development~/Ninjadini.Neuro/obj/
+Development~/Ninjadini.Neuro/bin/
+Development~/Ninjadini.Neuro.CodeGen.Tests/bin/
+Development~/Ninjadini.Neuro.CodeGen.Tests/obj/
+Development~/Ninjadini.Neuro.CodeGen/bin/
+Development~/Ninjadini.Neuro.CodeGen/obj/
+Development~/Ninjadini.Neuro.SyncTests/bin/
+Development~/Ninjadini.Neuro.SyncTests/obj/
+Development~/Ninjadini.Neuro.IntegrationTests/bin/
+Development~/Ninjadini.Neuro.IntegrationTests/obj/
