--- a/Development~/Ninjadini.Neuro.CodeGen/Ninjadini.Neuro.CodeGen.csproj
+++ b/Development~/Ninjadini.Neuro.CodeGen/Ninjadini.Neuro.CodeGen.csproj
@@ -15,6 +15,6 @@
       <PackageReference Include="Microsoft.CodeAnalysis" Version="3.8.0" />
     </ItemGroup>
     <Target Name="PostBuild" AfterTargets="PostBuildEvent" Condition=" '$(Configuration)' == 'Release' ">
-        <Exec Command="cp $(TargetPath) $(ProjectDir)../Ninjadini.Neuro/CodeGen/netstandard2.0" />
+        <Exec Command="cp $(TargetPath) $(ProjectDir)../../Ninjadini.Neuro/CodeGen/netstandard2.0" />
     </Target>
 </Project>
