--- a/package.json
+++ b/package.json
@@ -3,5 +3,10 @@
   "version": "0.0.1",
   "unity": "2022.1",
   "displayName": "Ninjadini Neuro",
-  "description": ""
+  "description": "",
+  "author":
+  {
+    "name": "Ninjadini",
+    "url": "https://ninjadini.com/"
+  }
 }
