made it 'just works' straight from importing the lib

--- a/Ninjadini.Neuro.Unity/package.json
+++ b/Ninjadini.Neuro.Unity/package.json
@@ -5,6 +5,7 @@
   "displayName": "Ninjadini Neuro Unity",
   "description": "",
   "dependencies" : {
-    "com.ninjadini.neuro" : "0.0.1"
+    "com.ninjadini.neuro" : "0.0.1",
+    "com.unity.addressables": "2.0.0"
   }
 }
