ignore root meta files

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ Development~/Ninjadini.Neuro.SyncTests/bin/
 Development~/Ninjadini.Neuro.SyncTests/obj/
 Development~/Ninjadini.Neuro.IntegrationTests/bin/
 Development~/Ninjadini.Neuro.IntegrationTests/obj/
+/*.meta
