--- a/.gitignore
+++ b/.gitignore
@@ -12,12 +12,11 @@ Development~/Ninjadini.Neuro.SyncTests/bin/
 Development~/Ninjadini.Neuro.SyncTests/obj/
 Development~/Ninjadini.Neuro.IntegrationTests/bin/
 Development~/Ninjadini.Neuro.IntegrationTests/obj/
-NeuroExample~/Library/
-NeuroExample~/Temp/
-NeuroExample~/Logs/
-
-NeuroExample~/UserSettings/
-NeuroExample~/*.csproj
-NeuroExample~/obj/
-NeuroExample~/*.sln
-NeuroExample~/NeuroData/30-MassiveTableRow/
+ExampleProject~/Library/
+ExampleProject~/Temp/
+ExampleProject~/Logs/
+ExampleProject~/UserSettings/
+ExampleProject~/*.csproj
+ExampleProject~/obj/
+ExampleProject~/*.sln
+ExampleProject~/NeuroData/30-MassiveTableRow/
